--- a/LearnJava/pom.xml
+++ b/LearnJava/pom.xml
@@ -3,12 +3,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.shah.mylearn.ch01</groupId>
-  <artifactId>SortMain</artifactId>
+  <groupId>com.shah.mylearn</groupId>
+  <artifactId>LearnJava</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>SortMain</name>
+  <name>LearnJava</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
+
+
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -16,6 +18,14 @@
     <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
 
+
+  <!--
+  <modules>
+    <module>java9cookbook</module>
+
+  </modules>
+
+  -->
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -47,6 +57,16 @@
             <release>11</release>
           </configuration>
         </plugin>
+
+          <plugin>
+              <groupId>org.codehaus.mojo</groupId>
+              <artifactId>versions-maven-plugin</artifactId>
+              <version>2.5</version>
+              <configuration>
+                  <generateBackupPoms>false</generateBackupPoms>
+              </configuration>
+          </plugin>
+
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
